<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_classic"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.machy1979ii.intervaltimer.ClassicActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10">



        <LinearLayout

            android:orientation="vertical"
            android:elevation="@dimen/velikostStinu"
            android:background="@drawable/backgroundcolorcaspripravy"

            android:layout_marginLeft="@dimen/velikostMezery"
            android:layout_marginRight="@dimen/velikostMezery"
            android:layout_marginTop="@dimen/velikostMezery"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/dlazdiceHlavniCas" >



            <TextView
                android:id="@+id/textViewBeziciCasNadpis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nadpisCasPripravy"
                android:textColor="@color/colorPisma"
                android:textSize="@dimen/velikostTextuNadpis"
                android:textStyle="bold" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            <androidx.appcompat.widget.AppCompatTextView
                android:includeFontPadding="false"
                android:id="@+id/textViewBeziciCasCisloKola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/velikostMezeryPismaOdpocitavace"
                android:layout_marginRight="@dimen/velikostMezeryPismaOdpocitavace"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="1"
                android:textColor="@color/colorPisma"
                android:textSize="@dimen/velikostCasuOdpocitavaniCtyri"
                android:textStyle="bold"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="@dimen/velikostCasuOdpocitavaniDva"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewBeziciCas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/velikostMezeryPismaOdpocitavace"
                android:layout_marginRight="@dimen/velikostMezeryPismaOdpocitavace"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/colorPisma"
                android:textSize="@dimen/velikostCasuOdpocitavaniDva"
                android:textStyle="bold"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="@dimen/velikostCasuOdpocitavaniDva"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                />

            </RelativeLayout>

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/dlazdicePodHlavnimCasem" >




            <LinearLayout
                android:layout_marginTop="@dimen/velikostMezery"
                android:layout_marginBottom="@dimen/velikostMezery"

                android:elevation="@dimen/velikostStinu"
                android:layout_marginLeft="@dimen/velikostMezery"
                android:layout_marginRight="@dimen/velikostMezery"
                android:id="@+id/dlazdicePodHlavnimCasem1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/backgroundmodrykulaterohy"
                android:layout_weight="1"
                android:onClick="showPickerNastavPocetCykluVTabate">




                <TextView
                    android:text="@string/nadpisPocetCyklu"
                    android:textSize="@dimen/velikostTextuNadpis"
                    android:textStyle="bold"
                    android:textColor="@color/colorPisma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/textViewPocetCykluNadpis" />

                <TextView
                    android:text="00/00"
                    android:textSize="@dimen/velikostTextuHodnoty"
                    android:textStyle="bold"
                    android:textColor="@color/colorPisma"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/textViewAktualniPocetCyklu"/>

            </LinearLayout>

            <LinearLayout
                android:elevation="@dimen/velikostStinu"
                android:layout_marginTop="@dimen/velikostMezery"
                android:layout_marginBottom="@dimen/velikostMezery"

                android:id="@+id/dlazdicePodHlavnimCasem2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showPauseDialog"
                android:background="@drawable/backgroundmodrykulaterohy"
                >

                <TextView

                    android:textStyle="bold"
                    android:textSize="@dimen/velikostTextuCelkovyCas"
                    android:textColor="@color/colorPisma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/textViewCelkovyCas" />


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayoutPauza"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:background="@mipmap/pausestojatotabataactivity"
                        android:orientation="vertical">


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!-- misto tho drawable tam u tech třech bylo tohle
             android:background="@color/colorZmacknutePauzy"
             android:background="@drawable/backgroundmodrykulaterohy"
             -->
            <LinearLayout
                android:elevation="@dimen/velikostStinu"
                android:layout_marginRight="@dimen/velikostMezery"
                android:layout_marginTop="@dimen/velikostMezery"
                android:layout_marginBottom="@dimen/velikostMezery"

                android:id="@+id/dlazdicePodHlavnimCasem3"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/backgroundmodrykulaterohy"
                android:layout_marginLeft="@dimen/velikostMezery"
                android:layout_weight="1"
                android:onClick="showTimePickerDialogNastavCasKolaVCasovaci">

                <TextView
                    android:text="@string/nadpisPocetTabatC"
                    android:textSize="@dimen/velikostTextuNadpis"
                    android:textStyle="bold"
                    android:textColor="@color/colorPisma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/textViewHodnotaPoctuTabatNadpis" />

                <TextView
                    android:text="00/00"
                    android:textSize="@dimen/velikostTextuHodnoty"
                    android:textStyle="bold"
                    android:textColor="@color/colorPisma"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/textViewAktualniPocetTabat"/>
            </LinearLayout>

        </LinearLayout>




        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:elevation="@dimen/velikostStinu"
            android:background="@drawable/backgroundreklama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6701702247641250/5801491018" />

 </LinearLayout>


</LinearLayout>